--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -1,8 +1,8 @@
 .product-detail-container {
   background-color: #1e2a38;
-  min-height: 100vh;
-  padding: 3rem 1rem;
+  padding: 2rem 1rem;
   display: flex;
+  flex: 1;
   justify-content: center;
   align-items: center;
 }
