--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -142,3 +142,13 @@
   max-width: 250px;
   margin-bottom: 0;
 }
+
+.main-info{
+  padding: 1rem;
+  text-align: center;
+  color: #a8c0e0;
+
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
