--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -12,8 +12,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 100%;
-  min-height: 22.5rem; /* puedes ajustar según estética */
+  min-height: 27rem;
 }
 
 .main-product img {
@@ -110,10 +109,28 @@
 
 .main-product-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   padding: 2rem;
   justify-items: center;
+}
+
+@media (max-width: 1200px) {
+  .main-product-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 900px) {
+  .main-product-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .main-product-list {
+    grid-template-columns: 1fr;
+  }
 }
 
 .main-product-buttons {
