--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -30,7 +30,7 @@
   font-size: 1rem;
   margin-bottom: 0.5rem;
   color: #ffffff;
-  flex-grow: 1; /* ocupa el espacio disponible */
+  flex-grow: 1;
 }
 
 .main-product p {
@@ -196,4 +196,26 @@
   display: flex;
   align-items: center;
   height: 100%;
+}
+
+.main-see-more-bar {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
+
+.see-more-btn {
+  background-color: rgba(46, 186, 204, 0.1);
+  color: #2ea7cc;
+  border: 1px solid #2e9acc;
+  border-radius: 20px;
+  padding: 0.7rem 2rem;
+  font-size: .8rem;
+  cursor: pointer;
+  box-shadow: 0 2px 8px rgba(39, 174, 96, 0.10);
+  transition: background 0.2s;
+}
+
+.see-more-btn:hover {
+  background-color: #1f6391;
 }
